# tally-counter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  ci-build.yml  ci-publish.yml  publish.yml  push.yml
benchmarks/: sum.py
docs/: DEV.md
src/tally_counter/: __init__.py  counter.py  data_point.py  data_series.py  point.py  series.py
tests/: __init__.py  test_counter.py  test_data_point.py  test_data_series.py  test_point.py  test_series.py
